--- a/themes/hugo-book/layouts/posts/single.html
+++ b/themes/hugo-book/layouts/posts/single.html
@@ -4,7 +4,7 @@
     {{ partial "docs/title.html" . }}
   </h2>
   {{ partial "docs/post-meta" . }}
-  <div class="book-post-content editable">
+  <div class="book-post-content">
     {{- .Content -}}
   </div>
 </article>
